--- a/Electric_Meter/MVVM/Views/CommandManagerView.xaml
+++ b/Electric_Meter/MVVM/Views/CommandManagerView.xaml
@@ -1,12 +1,70 @@
-﻿<UserControl x:Class="Electric_Meter.MVVM.Views.CommandManagerView"
+<UserControl x:Class="Electric_Meter.MVVM.Views.CommandManagerView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:ui="http://schemas.lepo.co/wpfui/2022/xaml"
              xmlns:local="clr-namespace:Electric_Meter.MVVM.Views"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="800">
+             d:DesignHeight="450" d:DesignWidth="800"
+             Background="#fff">
     <Grid>
-            
+        <Border Style="{StaticResource BorderContent}">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="2*"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+                <Grid Grid.Column="0">
+                    <Grid>
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="auto"/>
+                            <RowDefinition Height="*"/>
+                        </Grid.RowDefinitions>
+                        <Border Grid.Row="0" Style="{StaticResource BorderContent}">
+                            <Grid Margin="10">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+                                <StackPanel Grid.Row="0" Orientation="Horizontal">
+                                    <TextBlock Width="120"  Text="Id" Style="{StaticResource Content Textblock}"/>
+                                    <TextBox Width="120"  Text="{Binding Id}" Style="{StaticResource Content TextBox}" />
+                                </StackPanel>
+                                <StackPanel Grid.Row="1" Orientation="Horizontal">
+                                    <TextBlock Width="120" Text="{Binding CodeTypeText}" Style="{StaticResource Content Textblock}"/>
+                                    <TextBox Width="120"  Text="{Binding CommandType}" Style="{StaticResource Content TextBox}" />
+                                </StackPanel>
+                                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                    <TextBlock Width="120"  Text="{Binding NameText}" Style="{StaticResource Content Textblock}"/>
+                                    <TextBox Width="120"  Text="{Binding Name}" Style="{StaticResource Content TextBox}"/>
+                                </StackPanel>
+                                
+                            </Grid>
+                        </Border>
+                        <Border Grid.Row="1" Style="{StaticResource BorderContent}">
+                            <DataGrid x:Name="CodeTypeGrid" Style="{StaticResource BaseDataGridView}"
+                                      ItemsSource="{Binding LstCodeType,UpdateSourceTrigger=PropertyChanged}"
+                                      SelectedItem="{Binding SelectedCodeType, UpdateSourceTrigger=PropertyChanged}">
+                                <DataGrid.Columns>
+                                    <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="*"/>
+                                    <DataGridTextColumn Header="{Binding CodeTypeText}" Binding="{Binding CodeTypeId}" Width="*"/>
+                                    <DataGridTextColumn Header="{Binding NameText}" Binding="{Binding NameCodeType}" Width="*"/>
+                                </DataGrid.Columns>
+                            </DataGrid>
+                                      
+                        </Border>
+                    </Grid>
+                </Grid>
+                <Border Grid.Column="1" Style="{StaticResource BorderContent}">
+                    <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Top" Margin="10,15,0,0">
+                        <Button Content="{Binding AddCommandText}" Command="{Binding AddTypeCommand}" Margin="0,0,0,10"/>
+                        <Button Content="{Binding UpdateCommandText}" Command="{Binding EditTypeCommand}" Margin="0,0,0,10"/>
+                        <Button Content="{Binding DeleteCommandText}" Command="{Binding DeleteTypeCommand}" Margin="0,0,0,10"/>
+                    </StackPanel>
+                </Border>
+            </Grid>
+        </Border>
     </Grid>
 </UserControl>
