--- a/Electric_Meter/MVVM/Views/SensorTypeManagerView.xaml
+++ b/Electric_Meter/MVVM/Views/SensorTypeManagerView.xaml
@@ -25,13 +25,13 @@
                                 <Grid.RowDefinitions>
                                     <RowDefinition Height="*"/>
                                     <RowDefinition Height="*"/>
-                                    <RowDefinition Height="*"/>
                                 </Grid.RowDefinitions>
                                 <StackPanel Grid.Row="0" Orientation="Horizontal">
-                                    <TextBlock Width="120"  Text="Id" Style="{StaticResource Content Textblock}"/>
+                                    <TextBlock Width="120"  Text="{Binding TypeIdText}" Style="{StaticResource Content Textblock}"/>
                                     <TextBox Width="120"  Text="{Binding TypeId}" Style="{StaticResource Content TextBox}" />
                                 </StackPanel>
-                                <StackPanel Grid.Row="2" Orientation="Horizontal">
+                                
+                                <StackPanel Grid.Row="1" Orientation="Horizontal">
                                     <TextBlock Width="120"  Text="{Binding NameText}" Style="{StaticResource Content Textblock}"/>
                                     <TextBox Width="120"  Text="{Binding Name}" Style="{StaticResource Content TextBox}"/>
                                 </StackPanel>
@@ -43,7 +43,7 @@
                               ItemsSource="{Binding LstSensorType,UpdateSourceTrigger=PropertyChanged}"
                               SelectedItem="{Binding SelectedSensorType, UpdateSourceTrigger=PropertyChanged}">
                                 <DataGrid.Columns>
-                                    <DataGridTextColumn Header="Id" Binding="{Binding Id}" Width="*"/>
+                                    <DataGridTextColumn Header="{Binding TypeIdText}" Binding="{Binding TypeId}" Width="*"/>
                                     <DataGridTextColumn Header="{Binding NameText}" Binding="{Binding Name}" Width="*"/>
                                 </DataGrid.Columns>
                             </DataGrid>
